k8s/backend.yaml
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: final-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
      namespace: final-project
    spec:
      imagePullSecrets:
        - name: docker-login-secret
      containers:
        - name: fastapi-container
          image: vladgerasimov97/hse_registry:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/data
              name: fastapi-data
      volumes:
        - name: fastapi-data
          persistentVolumeClaim:
            claimName: fastapi-pvc

---
# service
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: final-project
spec:
  selector:
    app: fastapi-app
  ports:
  - port: 8000
    targetPort: 8000
  type: NodePort
