k8s/frontend.yaml
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-deployment
  namespace: final-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
      namespace: final-project
    spec:
      imagePullSecrets:
        - name: docker-login-secret
      containers:
        - name: streamlit-container
          image: vladgerasimov97/hse_registry:latest
          command:
            ["python" , "-m", "streamlit", "run", "src/frontend/streamlit_app.py"]
          ports:
            - containerPort: 8000

---
# service
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: final-project
spec:
  selector:
    app: streamlit-app
  ports:
  - port: 8501
    targetPort: 8501
  type: NodePort
